--- a/uf_mp3player.lfm
+++ b/uf_mp3player.lfm
@@ -7,6 +7,7 @@ object f_mp3player: Tf_mp3player
   ClientHeight = 383
   ClientWidth = 542
   OnCreate = FormCreate
+  OnDestroy = FormDestroy
   LCLVersion = '0.9.30.2RC1'
   object lb_soundmixer: TComboBox
     Left = 72
@@ -17,6 +18,7 @@ object f_mp3player: Tf_mp3player
     AutoSize = False
     DropDownCount = 20
     ItemHeight = 13
+    OnChange = lb_soundmixerChange
     Style = csDropDownList
     TabOrder = 0
   end
@@ -28,32 +30,6 @@ object f_mp3player: Tf_mp3player
     Caption = 'Soud mixer:'
     ParentColor = False
   end
-  object Label2: TLabel
-    Left = 29
-    Height = 14
-    Top = 32
-    Width = 21
-    Caption = 'File:'
-    ParentColor = False
-  end
-  object e_fn: TEdit
-    Left = 72
-    Height = 21
-    Top = 31
-    Width = 346
-    Anchors = [akTop, akLeft, akRight]
-    TabOrder = 1
-  end
-  object b_fn: TButton
-    Left = 426
-    Height = 21
-    Top = 31
-    Width = 24
-    Anchors = [akTop, akRight]
-    Caption = '...'
-    OnClick = b_fnClick
-    TabOrder = 2
-  end
   object b_play: TButton
     Left = 458
     Height = 25
@@ -62,7 +38,7 @@ object f_mp3player: Tf_mp3player
     Anchors = [akTop, akRight]
     Caption = 'Play'
     OnClick = b_playClick
-    TabOrder = 3
+    TabOrder = 1
   end
   object e_log: TMemo
     Left = 0
@@ -72,12 +48,12 @@ object f_mp3player: Tf_mp3player
     Align = alBottom
     ReadOnly = True
     ScrollBars = ssVertical
-    TabOrder = 4
+    TabOrder = 2
   end
   object Label3: TLabel
     Left = 24
     Height = 14
-    Top = 64
+    Top = 32
     Width = 35
     Caption = 'Volume'
     ParentColor = False
@@ -85,11 +61,11 @@ object f_mp3player: Tf_mp3player
   object Panel3: TPanel
     Left = 73
     Height = 16
-    Top = 64
+    Top = 32
     Width = 170
     ClientHeight = 16
     ClientWidth = 170
-    TabOrder = 5
+    TabOrder = 3
     object psp_volume: TPairSplitter
       Left = 1
       Height = 14
@@ -144,10 +120,10 @@ object f_mp3player: Tf_mp3player
   object cb_fade: TCheckBox
     Left = 15
     Height = 17
-    Top = 87
+    Top = 55
     Width = 44
     Caption = 'Fade'
-    TabOrder = 6
+    TabOrder = 4
   end
   object b_stop: TButton
     Left = 458
@@ -156,16 +132,16 @@ object f_mp3player: Tf_mp3player
     Width = 75
     Anchors = [akTop, akRight]
     Caption = 'Stop'
-    TabOrder = 7
+    TabOrder = 5
   end
   object Panel4: TPanel
     Left = 73
     Height = 16
-    Top = 88
+    Top = 56
     Width = 170
     ClientHeight = 16
     ClientWidth = 170
-    TabOrder = 8
+    TabOrder = 6
     object psp_fade: TPairSplitter
       Left = 1
       Height = 14
@@ -217,22 +193,22 @@ object f_mp3player: Tf_mp3player
   end
   object Panel7: TPanel
     Left = 0
-    Height = 179
-    Top = 128
+    Height = 211
+    Top = 96
     Width = 542
     Align = alBottom
     Anchors = [akTop, akLeft, akRight, akBottom]
     BevelOuter = bvNone
-    ClientHeight = 179
+    ClientHeight = 211
     ClientWidth = 542
-    TabOrder = 9
+    TabOrder = 7
     object Panel8: TPanel
       Left = 456
-      Height = 179
+      Height = 211
       Top = 0
       Width = 86
       Align = alRight
-      ClientHeight = 179
+      ClientHeight = 211
       ClientWidth = 86
       TabOrder = 0
       object b_add: TButton
@@ -256,31 +232,30 @@ object f_mp3player: Tf_mp3player
     end
     object lb_files: TListBox
       Left = 0
-      Height = 179
+      Height = 211
       Top = 0
       Width = 456
       Align = alClient
       ItemHeight = 0
+      OnDblClick = lb_filesDblClick
       TabOrder = 1
     end
   end
   object pb_prog: TProgressBar
     Left = 8
     Height = 8
-    Top = 112
+    Top = 80
     Width = 525
     Anchors = [akTop, akLeft, akRight]
     Smooth = True
-    TabOrder = 10
+    TabOrder = 8
   end
   object d_fn: TOpenDialog
-    left = 376
-    top = 8
+    left = 360
   end
   object Tick: TTimer
     Interval = 150
     OnTimer = TickTimer
-    left = 336
-    top = 8
+    left = 328
   end
 end
